# AFoPModManager

./: .gitignore  CMakeLists.txt  README.md  main.py
include/: FilePusher.hpp  ModManager.hpp  SetupManager.hpp
include/modManagerEmbedded/: EmbedManager.hpp  versiondll.h
packer/: CMakeLists.txt
packer/include/packer/: Packer.h
packer/src/: FileUtils.cpp  ModArchive.cpp  Packer.cpp
src/: EmbeddedManager.cpp  FilePusher.cpp  Main.cpp  ModManager.cpp  SetupManager.cpp
